Work on getting the fiels to show right in Excel, and then be parsed correctly afterwards.  Actually entering the imported values into the database at the end is not implemented yet, nor is checking of permissions.
Because we are doing a release today, the link in the importtool page to these
exports is disabled.

--- a/flooding_lib/tools/importtool/templates/import/imports_overview.html
+++ b/flooding_lib/tools/importtool/templates/import/imports_overview.html
@@ -53,5 +53,5 @@
 		<br>
 		<a href="{%url flooding_tools_import_group %}" >{% trans "Import groep scenario's" %}</a>
                 <br>
-		<a href="{%url flooding_excel_import_export %}">Exporteer of importeer metadata update bestaande scenario's</a>
+{% comment %}		<a href="{%url flooding_excel_import_export %}">Exporteer of importeer metadata update bestaande scenario's</a> {% endcomment %}
 {% endblock content %}
