More work on the Excel export/import. Imported Excel files are now actually saved in the database. This is still a work in progress.
Fix a bug that prevents Javascript displaying the 'import new
scenario' page (doubly-escaped Javascript).

Some cleanup, more tests, more translated strings.

--- a/flooding_lib/tools/importtool/templates/import/import_scenario.html
+++ b/flooding_lib/tools/importtool/templates/import/import_scenario.html
@@ -59,7 +59,7 @@
         ID: "helptext",
         autodraw: true,
         padding: 15,
-        contents: {{ legend_html_json }}
+        contents: {{ legend_html_json|safe }}
     });
 {% endif %}
 
