--- a/flooding_lib/templates/flooding/scenario_list.html
+++ b/flooding_lib/templates/flooding/scenario_list.html
@@ -18,7 +18,7 @@ Lizard-flooding: {% trans 'Scenarios' %}
 <script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
 
 {% if can_approve %}
-<p><a href="{% url flooding_scenario_share_list %}">{% trans "Offer or accept a scenario for sharing" %}</a></p>
+<p><a href="{% url flooding_scenario_share_list %}">{% trans "Offer a scenario for use in the ROR and/or national use projects" %}</a></p>
 {% endif %}
 <h1>{% trans 'Scenario list' %}</h1>
 <p>
