--- a/flooding_lib/templates/flooding/excel_import_export_project.html
+++ b/flooding_lib/templates/flooding/excel_import_export_project.html
@@ -11,6 +11,10 @@ Flooding: Metadata update
 <script type="text/javascript" src="{% url root_url %}static_media/flooding_lib/share_scenarios.js"></script>
 
 <h2>{{ view.project.name }}</h2>
+{% if view.project.excel_generation_too_slow %}
+<p><strong>Let op:</strong> Omdat het genereren van de Excel file voor dit project lang duurt, gebeurt dit niet dynamisch maar <strong>eens per uur</strong>.</p>
+<p>Het bestand dat u hier kunt downloaden werd genereerd op: <strong>{{ view.last_changed }}</strong>. Aanpassingen zijn pas zichtbaar nadat het bestand opnieuw gegeneerd is.</p>
+{% endif %}
 <p><a href="{% url flooding_excel_download view.project_id %}{{ view.project.excel_filename }}">Download Excel file met de huidige metadata</a></p>
 
 {% if view.excel_errors %}
