--- a/flooding_lib/templates/flooding/excel_import_export_project.html
+++ b/flooding_lib/templates/flooding/excel_import_export_project.html
@@ -12,7 +12,7 @@ Flooding: Metadata update
 
 <h2>{{ view.project.name }}</h2>
 {% if view.project.excel_generation_too_slow %}
-<p>Het bestand dat u hier kunt downloaden werd genereerd op: <strong>{{ view.last_changed }}</strong>. Aanpassingen zijn pas zichtbaar nadat het bestand opnieuw gegeneerd is. Dit gebeurt momenteel <strong> eens per twee uur</strong>.</p>
+<p>Het bestand dat u hier kunt downloaden werd gegenereerd op: <strong>{{ view.last_changed }}</strong>. Aanpassingen zijn pas zichtbaar nadat het bestand opnieuw gegenereerd is. Dit gebeurt momenteel <strong> eens per twee uur</strong>.</p>
 {% endif %}
 <p><a href="{% url flooding_excel_download view.project_id %}{{ view.project.excel_filename }}">Download Excel file met de huidige metadata</a></p>
 
