--- a/flooding_lib/tools/importtool/templates/import/imports_overview.html
+++ b/flooding_lib/tools/importtool/templates/import/imports_overview.html
@@ -10,6 +10,9 @@
 {% endblock stylesheets %}
 {% block bodyarguments %} class="scrollable" {% endblock %}
 {% block content %}
+<p>
+<a href="{% url flooding_excel_import_export %}">Down- en upload hier een overzicht van alle metadata van een project.</a>
+</p>
 		<h1>
 		{% trans "Overview" %}
 		</h1>
