--- a/flooding_lib/sharedproject/templates/sharedproject/dashboard.html
+++ b/flooding_lib/sharedproject/templates/sharedproject/dashboard.html
@@ -12,13 +12,13 @@ Flooding: {% trans 'Share scenarios' %}
 
 <table>
 <thead>
-<th>Naam</th>
-<th>Aantal scenarios</th>
-<th>Goedgekeurd</th>
-<th>Afgekeurd</th>
-<th>Nog te keuren</th>
-<th>Excel</th>
-<th>Uploaden</th>
+<th>{% trans "Name" %}</th>
+<th>{% trans "Number of scenarios" %}</th>
+<th>{% trans "Approved" %}</th>
+<th>{% trans "Disapproved" %}</th>
+<th>{% trans "Not yet approved" %}</th>
+<th>{% trans "Excel file" %}</th>
+<th>{% trans "Upload" %}</th>
 </thead>
 {% for province, stats in view.provinces_with_stats %}
 <tr>
