--- a/flooding_lib/sharedproject/templates/sharedproject/dashboard.html
+++ b/flooding_lib/sharedproject/templates/sharedproject/dashboard.html
@@ -10,6 +10,13 @@ Flooding: {% trans 'Share scenarios' %}
 <script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
 <h2>{{ view.project }} dashboard</h2>
 
+{% if view.messages %}
+<ul>
+{% for message in view.messages %}
+<li>{{ message }}</li>
+{% endfor %}
+</ul>
+{% endif %}
 <table>
 <thead>
 <th>{% trans "Name" %}</th>
