--- a/flooding_lib/templates/flooding/breachinfo.html
+++ b/flooding_lib/templates/flooding/breachinfo.html
@@ -63,8 +63,13 @@ Flooding: {% trans 'Breach information' %}
 
 {% for scenario in view.scenarios %}
 {% if 1 %}
+<div style="float: left;">
+<h3>{{ scenario.id }}: {{ scenario.name }}</h3>
+<a href="{{ scenario.max_waterdepth_image }}">
 <img src="{{ scenario.max_waterdepth_image }}" width="400" height="400"
-     title="{{ scenario.name }}"/>
+     title="{{ scenario.name }}" style="border: solid black 1px;"/>
+</a>
+</div>
 {% else %}
 <div id="map-{{scenario.id}}" style="width: 600px; height: 300px;"></div>
 
