--- a/flooding_lib/templates/flooding/breachinfo.html
+++ b/flooding_lib/templates/flooding/breachinfo.html
@@ -64,7 +64,7 @@ Flooding: {% trans 'Breach information' %}
 {% for scenario in view.scenarios %}
 {% if 1 %}
 {% if scenario.max_waterdepth_image %}
-<div style="float: left;">
+<div style="float: left; width: 410px;">
 <h3>{{ scenario.id }}: {{ scenario.name }}</h3>
 <a href="{{ scenario.max_waterdepth_image }}">
 <img src="{{ scenario.max_waterdepth_image }}" width="400" height="400"
