--- a/flooding_lib/templates/flooding/breachinfo.html
+++ b/flooding_lib/templates/flooding/breachinfo.html
@@ -11,6 +11,8 @@ Flooding: {% trans 'Breach information' %}
 
 {% block javascripts %}
 <script type="text/javascript" src="/static_media/weblib/OpenLayers-2.8/OpenLayers.js" type="text/javascript"> </script>
+<script type="text/javascript" src="{% url root_url %}static_media/weblib/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="{% url root_url %}static_media/flooding_lib/breachinfo.js"></script>
 {% endblock javascripts %}
 
 {% block content %}
@@ -20,6 +22,7 @@ Flooding: {% trans 'Breach information' %}
   <table>
     <thead>
       <tr>
+      <td><input type="checkbox" id="checkbox-all" checked="checked"/></td>
       <td>ID</td>
       <td>Scenario</td>
       <td>Orig. project</td>
@@ -33,6 +36,7 @@ Flooding: {% trans 'Breach information' %}
     <tbody>
     {% for scenario in view.scenarios %}
     <tr>
+      <td><input type="checkbox" class="checkbox-scenario" data-scenario-id="{{ scenario.id }}" checked="checked"/></td>
       <td>{{ scenario.id }}</td>
       <td>{{ scenario }}</td>
       <td>{{ scenario.main_project }}</td>
@@ -62,31 +66,16 @@ Flooding: {% trans 'Breach information' %}
 </div>
 
 {% for scenario in view.scenarios %}
-{% if 1 %}
-{% if scenario.max_waterdepth_image %}
-<div style="float: left; width: 410px;">
-<h3>{{ scenario.id }}: {{ scenario.name }}</h3>
-<a href="{{ scenario.max_waterdepth_image }}">
-<img src="{{ scenario.max_waterdepth_image }}" width="400" height="400"
-     title="{{ scenario.name }}" style="border: solid black 1px;"/>
-</a>
+{% if scenario.max_waterdepth_image and scenario.max_waterdepth_extent %}
+<div id="mapcontainer-{{scenario.id}}" style="float: left; width: 410px;">
+  <h3>{{ scenario.id }}: {{ scenario.name }}</h3>
+  <div id="map-{{scenario.id}}"
+       class="map"
+       style="width: 400px; height: 400px; border: solid black 1px;"
+       data-bounds="{{ scenario.max_waterdepth_extent }}"
+       data-image-url="{{ scenario.max_waterdepth_image }}">
+  </div>
 </div>
-{% endif %}
-{% else %}
-<div id="map-{{scenario.id}}" style="width: 600px; height: 300px;"></div>
-
-<script type="text/javascript">
-(function () {
-    var map = new OpenLayers.Map('map-{{scenario.id}}');
-    var wms = new OpenLayers.Layer.WMS("OpenLayers WMS", "http://labs.metacarta.com/wms/vmap0", {layers: "basic"});
-    map.addLayers([wms]);
-
-    (new OpenLayers.Layer.Image("Test", "{{ scenario.max_waterdepth_image }}")).setMap(map);
-
-    map.zoomToMaxExtent();
-})();
-
-</script>
 {% endif %}
 {% endfor %}
 {% endblock %}
