Adds a view that returns a zipfile containing all the result files of a given scenario, possibly first unzipped. The view checks whether the user has approval permissions in at least one of the projects the scenario belongs to.
Adds the view to the breach info page as a 'download' link for each
scenario listed.

Adds a 'check_scenario_permission' method to the permission manager.

--- a/flooding_lib/templates/flooding/breachinfo.html
+++ b/flooding_lib/templates/flooding/breachinfo.html
@@ -31,6 +31,7 @@ Flooding: {% trans 'Breach information' %}
       <td>Slachtoffers</td>
       <td>Oppervlak o.g.</td>
       <td>Inundatievolume</td>
+      <td>Resultaten zipfile</td>
       </tr>
     </thead>
     <tbody>
@@ -58,6 +59,9 @@ Flooding: {% trans 'Breach information' %}
         {% if scenario.inundation_volume.value|is_not_None %}
         {{ scenario.inundation_volume.value|readable }} {{ scenario.inundation_volume.unit }}
         {% endif %}
+      </td>
+      <td>
+        <a href="{% url flooding_results_zipped scenario_id=scenario.id %}">download</a>
       </td>
     </tr>
     {% endfor %}
