Add a link (/flooding/preload/<project_id>/</scenario_id>/) that puts relevant information in the session and then redirects to the front page. Code in flooding-base 1.32 then causes the right scenario to open.

--- a/flooding_lib/templates/flooding/breachinfo.html
+++ b/flooding_lib/templates/flooding/breachinfo.html
@@ -39,7 +39,7 @@ Flooding: {% trans 'Breach information' %}
     <tr>
       <td><input type="checkbox" class="checkbox-scenario" data-scenario-id="{{ scenario.id }}" checked="checked"/></td>
       <td>{{ scenario.id }}</td>
-      <td>{{ scenario }}</td>
+      <td><a href="{% url preload_scenario_redirect scenario.main_project.id scenario.id %}">{{ scenario }}</a></td>
       <td>{{ scenario.main_project }}</td>
       <td>{{ scenario.frequency }}</td>
       <td>
