Changes for ROR export.

--- a/flooding_lib/tools/exporttool/templates/export/exports_run_detail.html
+++ b/flooding_lib/tools/exporttool/templates/export/exports_run_detail.html
@@ -29,7 +29,7 @@
 				</tr>
 				<tr class="cellDark">
 					<td><b>{% get_verbose_name export_run "creation_date" %}</b></td>
-					<td>{{ export_run.creation_date|date:"d-m-Y"}}</td>
+					<td>{{ export_run.creation_date|date:"d-m-Y h:m"}}</td>
 				</tr>			
 				<tr class="cell">
 					<td><b>{% get_verbose_name export_run "description" %}</b></td>
